# X-Filamenta-Python

./: .dockerignore  .editorconfig  .env.example  .env.production.backup  .env.production.example  .eslintignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .stylelintrc.mjs  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  START_SERVER_PROD.ps1  TASK_COMPLETE_SUMMARY.md  alembic.ini  docker-compose.yml  eslint.config.js  github.ps1  i18n_audit_data.json  makefile  nginx.conf  package-lock.json  package.json  push-github.ps1  pyproject.toml  run_prod.ps1  run_prod.py  start_prod_server.ps1
.dev_scripts/: CHECKLIST_FINALE.md  PARATHESE_SUMMARY.md  PHASE1_ACTION_PLAN.md  PHASE1_NEXT_STEPS.md  README.md  test_production_deployment.py
.dev_scripts/utilities/: backup_database.ps1  clean_server.ps1  start_server.ps1
.github/: AI_INSTRUCTIONS.md  CODEOWNERS  READ_BEFORE_ANY_CHANGE.md  ROUTE_CHANGE_RULES.md  SERVER_KILL_COMMANDS.md  USER_PREFERENCES.md  ai-broken-routes-blacklist.md  ai-quick-rules.md  copilot-instructions.md  git-commit-instructions.md  i18n-comparison-report. md  incidents-history-2025-12-30-bugs.md  incidents-history-2025-12-30-phase1-corrections.md  incidents-history-2025-12-30.md  incidents-history.md  powershell.instructions.md  pull_request_template.md  python.instructions.md  read-before-any-change.md  user-preferences.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.md  question.yml
.github/archives/: i18n-comparison-report.md
.github/instructions/: .github_instructions_frontend.instructions.md.instructions.md  README.md  ai-modification-checklist.md  ai-reminder.md  copilot-instructions.md  copilot-powershell.md.instructions.md  frontend.instructions.md  python.instructions.md.instructions.md  workflow-rules.md
.github/prompts/: README_FR.md  ROADMAP_WORKFLOW.md  add-feature-complete.prompt.md  add-wizard-step.prompt.md  analyze-code-vs-roadmap.prompt.md  analyze-project-stack.prompt.md  cleanup-roadmap.prompt.md  create-htmx-endpoint.prompt.md  debug-issue.prompt.md  dev-quality.prompt.md  documentation-complete-cleanup.prompt.md  fix-security-issue.prompt.md  generate-completion-plan.prompt.md  generate-test-suite.prompt.md  htmx-fragment.prompt.md.prompt.md  i18n-admin-management-implementation.prompt.md  i18n-audit-fix.prompt.md  i18n-audit-restructure.prompt.md  i18n-comprehensive-audit-and-fix.prompt.md  i18n-restructure-tabulator.prompt.md  index.html  list-project-features.prompt.md  migrate-dependency.prompt.md  pre-production-cleanup.prompt.md  refactor-route.prompt.md  report-bug.prompt.md  repository-cleanup.prompt.md  security-audit.prompt.md  tests-python.prompt.md.prompt.md  update-roadmap.prompt.md  venv-setup-windows.prompt.md
.github/workflows/: ci.yml  lint.yml  security.yml
.prompts/: Generic_Audit_Securite_Qualite_Fix.txt  Generic_Nettoyage_Docs_Gitignore.txt  README.md
.prompts/Claude/: 01_Audit_Securite_Qualite_Fix.md  02_Nettoyage_Docs_Gitignore.md
.prompts/GPT/: 01_Audit_Securite_Qualite_Fix.md  02_Nettoyage_Docs_Gitignore.md
.prompts/Gemini/: 01_Audit_Securite_Qualite_Fix.md  02_Nettoyage_Docs_Gitignore.md
.roadmap/: IMPLEMENTATION_PROGRESS.md  INDEX.md  PROGRESS.md  README.md  SUMMARY.txt  TIMELINE.md
.roadmap.backup-20251229-220748/: README.md  ROADMAP.md  features.md  features_phase4_p1.md
Analysis_reports/: 2025-12-27_00-00_x-filamenta-project-init.md  2025-12-27_12-45_phase4_followup.md  2025-12-27_14-00_project_analysis_and_roadmap.md  2025-12-27_20-20_phase4_csrf_protection.md  2025-12-27_21-30_security_quality_audit.md  2025-12-27_changelog_rules_implementation.md  2025-12-27_final_audit_post_phase3.md  2025-12-27_phase1_corrections_final.md  2025-12-28_01-00_wizard_fixes_audit.md  2025-12-28_02-30_wizard_redesign.md  2025-12-28_03-00_wizard_corrections_completes.md  2025-12-28_11-40_cleanup_report.md  2025-12-28_12-00_wizard_test_scripts.md  2025-12-28_12-30_wizard_fixes_complete.md  2025-12-28_12-35_REAL_FIXES_APPLIED.md  2025-12-28_21-10_i18n_and_db_name_fixes.md  2025-12-28_21-20_db_name_persistent.md  2025-12-28_21-50_HTML_DOCUMENTATION_GENERATION_COMPLETE.md  2025-12-28_22-00_SESSION_FINALE_DOCUMENTATION_HTML.md  2025-12-28_22-30_CORRECTIONS_CRITIQUES.md  2025-12-28_22-50_NETTOYAGE_EFFECTUE.md  2025-12-28_23-25_DOCUMENTATION_ORGANISATION_COMPLETE.md  2025-12-28_23-30_ORGANISATION_DOCUMENTATION_FINALE.md  2025-12-28_COURT_TERME_PLAN_EXECUTION.md  2025-12-28_COURT_TERME_RAPPORT_FINAL.md  2025-12-28_FIX_DONE_PAGE_VERIFY_DB.md  2025-12-28_PHASE_01_02_EXECUTION_SUMMARY.md  2025-12-28_PHASE_01_COMPLETE_AUDIT.md  2025-12-28_PHASE_02_CLEANUP_BEFORE.md  2025-12-28_PLAN_CORRECTIONS_COMPLET.md  2025-12-28_PROMPTS_EXECUTION_GUIDE.md  2025-12-28_RESUME_CORRECTIONS_FINAL.md  2025-12-28_TESTS_RUFF_MYPY_RAPPORT.md  2025-12-28_WIZARD_100_PERCENT_VALIDATED.md  2025-12-29_14-54_wizard_errors_corrections.md  2025-12-29_15-35_log_errors_corrections.md  2025-12-29_15-40_CORRECTIONS_SUMMARY.md  2025-12-29_15-42_FINAL_SUMMARY.md  2025-12-29_15-50_metadata_visible_fix.md  2025-12-29_15-52_METADATA_FIXED.md  (+58 more)
backend/: README.md  __init__.py  wsgi.py
docs/: 00_START_HERE.md  COMPARISON_FEATURES_OLD_VS_NEW.md  FEATURES_INVENTORY.md  NEXT_STEPS.md  PHASE1_COMPLETION_REPORT.md  PHASE1_DECISIONS.md  RAPPORT_FINAL_CONSOLIDÉ_COMPLET.md  README.md  REFERENCE.md  RESUME_FINAL_COMPLET.md
frontend/: README.md
migrations/: env.py  script.py.mako
scripts/: QUICK_START.md  README_WIZARD_TEST.md  analyze_code_vs_roadmap.py  apply_user_migration.py  build_full_html_docs.py  build_html_docs.py  clean_wizard.ps1  cleanup_pre_production.ps1  compare_i18n.py  create_admin.py  generate_html_docs.py  i18n_audit.py  init_db.py  mark_installed.py  run_security_scans.ps1  security_audit.py  seed_db.py  test_i18n_translations.py  test_simple_i18n.py  test_wizard_prod.ps1  validate_production_config.py  verify_installation.ps1
x_filamenta_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+587 files in other folders)
