# ==============================================================================
# Python Project Configuration
# ==============================================================================
# Purpose:  Defines build system, dependencies, and tool configurations
# File: pyproject. toml | Repository: X-Filamenta-Python
#
# License: AGPL-3.0-or-later
# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (c) 2025 XAREMA. All rights reserved.
# ==============================================================================

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x-filamenta-python"
version = "0.1.0-beta"
description = "Flask + HTMX + Bootstrap 5 — Application de gestion avec authentification 2FA, admin panel et i18n"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "AleGabMar", email = "filamenta@xarema.com" }
]
maintainers = [
    { name = "AleGabMar", email = "filamenta@xarema.com" }
]
keywords = [
    "flask",
    "htmx",
    "bootstrap",
    "web-application",
    "2fa",
    "admin-panel",
    "i18n"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved ::  GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
    "flask>=3.0,<4.0",
    "flask-login>=0.6,<1.0",
    "flask-compress>=1.23,<2.0",
    "python-dotenv>=1.0,<2.0",
    "flask-sqlalchemy>=3.0,<4.0",
    "flask-session>=0.6,<1.0",
    "flask-limiter>=3.5,<5.0",
    "flask-assets>=2.1,<3.0",
    "waitress>=2.1,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "bcrypt>=4.0,<6.0",
    "pyotp>=2.9,<3.0",
    "cryptography>=41.0,<47.0",
    "qrcode[pil]>=7.4,<9.0",
    "redis>=5.0,<6.0",
]

[project.urls]
Homepage = "https://github.com/xarema/X-Filamenta-Python"
Repository = "https://github.com/xarema/X-Filamenta-Python"
Issues = "https://github.com/xarema/X-Filamenta-Python/issues"
Documentation = "https://github.com/xarema/X-Filamenta-Python/tree/main/docs"
Changelog = "https://github.com/xarema/X-Filamenta-Python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
    "markdown>=3.5",
    "pygments>=2.17",
    "types-flask",
    "types-redis",
    "types-requests",
]

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["backend. tests*", "scripts*", "docs*", ". dev_scripts*"]

# ==============================================================================
# Ruff Configuration
# ==============================================================================
[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
exclude = [
    ". venv",
    "venv",
    "dist",
    "build",
    "node_modules",
    "*. egg-info",
    "migrations",
    "instance",
    ". git",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
]
ignore = [
    "S101",   # Use of assert (needed for pytest)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

# ==============================================================================
# Mypy Configuration
# ==============================================================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_equality = true
pretty = true
show_error_codes = true
show_column_numbers = true
exclude = [
    "\\.venv/",
    "node_modules/",
    "migrations/",
    "instance/",
    ".*\\.egg-info/",
    "build/",
    "dist/",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["backend.tests.*"]
disallow_untyped_defs = false

# ==============================================================================
# Pytest Configuration
# ==============================================================================
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = [
    "-q",
    "--disable-warnings",
    "--maxfail=1",
    "--cov=backend/src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--tb=short",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ==============================================================================
# Coverage Configuration
# ==============================================================================
[tool.coverage.run]
branch = true
source = ["backend/src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
fail_under = 50
skip_covered = false
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
